- Switched to getting jQuery validate from a CDN - Fixed alerts covering up the navbar - Made the new team validator better - Added form validation

--- a/css/app.css
+++ b/css/app.css
@@ -13,10 +13,7 @@ label.required::after {
 
 .message-container {
 	display: none;
-	position: fixed;
-	top: 0;
 	width: 100%;
-	z-index: 2000;
 }
 
 .confirm-header {
